--- a/config/boards/shields/moNa2/moNa2_R.conf
+++ b/config/boards/shields/moNa2/moNa2_R.conf
@@ -31,6 +31,9 @@ CONFIG_PMW3610_SMART_ALGORITHM=y
 CONFIG_PMW3610_ADJUSTABLE_MOUSESPEED=n
 CONFIG_PMW3610_MOVEMENT_THRESHOLD=5
 
+CONFIG_PMW3610_FLIP_X=1
+CONFIG_PMW3610_FLIP_Y=1 
+
 CONFIG_EC11=y
 CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
 
